--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
   Exclude:
     - "Guardfile"
     - "Rakefile"
+    - 'classes/main.rb'
     - "node_modules/**/*"
 
   DisplayCopNames: true
